# MacTtsTool_CoquiXTTS-v2

./: .gitignore  README.md  example.txt  pyproject.toml  setup.sh  text2speech.py
