[project]
name = "text-to-speech-cli"
version = "0.1.0"
description = "A command-line tool to convert text to MP3 using Coqui XTTS-v2"
requires-python = ">=3.10"
dependencies = [
    "TTS>=0.22.0",
    "torch>=2.0.0,<2.6.0",
    "torchaudio>=2.0.0,<2.6.0",
    "click>=8.1.0",
    "pydub>=0.25.1",
    "transformers<4.42.0",
]

[project.scripts]
text2speech = "text2speech:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
